Fixed height issues in calendar and added margins to the scrollbar

--- a/client/chronos/app/styles/modules/_colours.scss
+++ b/client/chronos/app/styles/modules/_colours.scss
@@ -1,6 +1,6 @@
 // Teal Green Style
-$primary-colour: #49b595;
-$secondary-colour: #25886b;
+// $primary-colour: #49b595;
+// $secondary-colour: #25886b;
 
 // Blue Style 
 // $primary-colour: #2588f7;
@@ -15,7 +15,7 @@ $secondary-colour: #25886b;
 // $secondary-colour: #b7b8be;
 
 // Purple Style
-// $primary-colour: #998099;
-// $secondary-colour: #8a6a8a;
+$primary-colour: #998099;
+$secondary-colour: #8a6a8a;
 
 $tertiary-colour: #FAFAFA;
