--- a/client/chronos/app/styles/partials/_calendar.scss
+++ b/client/chronos/app/styles/partials/_calendar.scss
@@ -1,6 +1,6 @@
 .calendar-area {
 	background: $tertiary-colour;
-	height: 850px;
+	height: 90%;
 	margin-top: $main-pane-margin-top;
 	width: 95%;
 	border-style: none;
