--- a/client/chronos/app/styles/partials/_eventcard.scss
+++ b/client/chronos/app/styles/partials/_eventcard.scss
@@ -1,8 +1,8 @@
 .events-area {
   width: 95%;
-  min-height: 100%;
-  max-height: 100%;
-  height: 100%;
+  min-height: 96%;
+  max-height: 96%;
+  height: 96%;
   overflow-y: scroll;
   border:0;
   background: $tertiary-colour;
